# novie-sdk

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-2b-step1-report.md
examples/: README.md
examples/python-consumer/: README.md  dependency-overrides.txt  pyproject.toml
examples/python-consumer/.well-known/: agent.json
examples/python-consumer/src/novie_python_consumer_demo/: __init__.py  main.py
examples/rust-consumer/: Cargo.toml  README.md
examples/rust-consumer/src/: main.rs
python/novie-agent-sdk/: README.md  pyproject.toml
python/novie-agent-sdk/docs/: sdk-api.md
python/novie-agent-sdk/src/novie_agent_sdk/: __init__.py  a2a_document.py  agent_runtime_bridge.py  agent_yaml.py  artifact_facade.py  artifact_ledger.py  artifact_text.py  byok_llm.py  call_scope.py  conformance.py  context_budget.py  context_packs.py  deep_agent_build.py  degradation.py  deliverables.py  document_agent_template.py  document_authoring_budget.py  document_capabilities.py  document_execution.py  document_final.py  document_plan.py  document_profiles.py  document_quality.py  document_resume.py  document_streaming.py  external_checkpoint.py  github_operations.py  langchain_adapter.py  llm_contract.py  llm_facade.py  manifest_generator.py  manifest_projection.py  manifest_validator.py  observability.py  output_contract.py  platform_callback.py  platform_chat_model.py  platform_langchain_tools.py  platform_namespace.py  platform_security.py  (+20 more)
python/novie-agent-sdk/src/novie_agent_sdk/openapi_provider/: __init__.py  errors.py  generator.py  live_shape.py  semantics.py
python/novie-agent-sdk/tests/: test_agent_output_helpers.py  test_agent_runtime_bridge.py  test_agent_yaml.py  test_artifact_facade.py  test_artifact_ledger.py  test_artifact_text.py  test_conformance.py  test_dev_seed_manifests.py  test_document_agent_template.py  test_document_authoring_budget.py  test_document_execution.py  test_document_plan.py  test_document_profiles.py  test_document_streaming.py  test_github_operations.py  test_import_surface.py  test_inputs_protocol.py  test_langchain_adapter.py  test_llm_facade.py  test_llm_namespace.py  test_manifest_generator.py  test_manifest_projection.py  test_manifest_validator.py  test_output_contract.py  test_platform_callback.py  test_platform_chat_model.py  test_platform_langchain_tools.py  test_platform_namespace.py  test_platform_services.py  test_pms.py  test_project_brief_helper.py  test_protocol_services.py  test_provider_authoring.py  test_provider_conformance.py  test_provider_golden_conformance.py  test_redis_invocation_store.py  test_runtime.py  test_runtime_config.py  test_sectioned_authoring.py  test_skill_contracts.py  (+5 more)
python/novie-agent-sdk/tests/fixtures/dev-seed-manifests/: analyst.agent.json  novie-cortex.agent.json  task_splitter.agent.json
python/novie-agent-sdk/tests/fixtures/openapi/: pms-openapi.json  pms-semantics.yaml
python/novie-agent-sdk/tests/fixtures/providers/integration_github/: capabilities.yaml  provider.yaml  resources.yaml
python/novie-agent-sdk/tests/fixtures/providers/observability/: capabilities.yaml  provider.yaml  resources.yaml
python/novie-agent-sdk/tests/openapi_provider/: test_generator.py  test_live_shape.py
python/novie-prompts/: .gitignore  README.md  pyproject.toml
python/novie-prompts/src/novie_prompts/: __init__.py  cli.py  client.py  config.py  registry.py  telemetry.py  testing.py
python/novie-prompts/tests/: test_classify.py  test_client.py  test_config.py  test_get_managed_prompt.py  test_integration_timeout.py  test_latency_bound.py  test_package.py  test_public_api.py  test_registry.py  test_registry_regression.py  test_resolve_prompt.py  test_seed_cli.py  test_telemetry.py  test_testing.py  test_testing_seam.py
rust/novie-agent-sdk/: Cargo.toml  README.md
rust/novie-agent-sdk/examples/: oneshot_agent.rs  stream_agent.rs  worker_agent.rs
rust/novie-agent-sdk/src/: a2a_runtime.rs  agent_status.rs  agent_status_client.rs  call_scope.rs  error.rs  github_operations.rs  headers.rs  lib.rs  long_task.rs  manifest.rs  memory.rs  payload.rs  platform_llm.rs  platform_services.rs  pms.rs  session.rs  token.rs  transport.rs
rust/novie-agent-sdk/tests/: a2a_runtime_conformance.rs  agent_status_client.rs  github_operations.rs  payload_parsing.rs  platform_llm.rs  platform_services.rs  pms.rs  registration_client.rs  token_roundtrip.rs
rust/novie-agent-sdk/tests/fixtures/: novie-cortex.agent.json
