[project]
name = "novie-python-consumer-demo"
version = "0.0.1"
description = "Reference consumer of the Novie Agent SDK (Python) via private Git dependency."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }

dependencies = [
    # Canonical consumer declaration — pulls the SDK from the private monorepo.
    # Pin to a language-prefixed tag. Swap `@python-v0.3.2` to a commit SHA
    # if you need an even tighter lock.
    "novie-agent-sdk[server] @ git+ssh://git@github.com/Novamind-Labs-Ltd/novie-sdk.git@python-v0.3.2#subdirectory=python/novie-agent-sdk",
]

# Local-development override (do NOT commit):
#   pip install -e ../../python/novie-agent-sdk
# or, declare it as a path in your own fork:
#   "novie-agent-sdk @ file:///abs/path/to/novie-sdk/python/novie-agent-sdk",

[project.scripts]
novie-demo = "novie_python_consumer_demo.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/novie_python_consumer_demo"]
