[package]
name = "novie-rust-consumer-demo"
version = "0.0.1"
edition = "2024"
description = "Reference consumer of the Novie Agent SDK (Rust) via private Git dependency."
license = "Apache-2.0"
publish = false
rust-version = "1.85"

[dependencies]
# Canonical consumer declaration — pulls the SDK from the private monorepo.
# cargo scans the whole repo and matches by package name, so NO subdirectory
# path is needed (unlike pip). Pin via `tag` (or `rev = "<sha>"` for a tighter lock).
novie-agent-sdk = { git = "ssh://git@github.com/Novamind-Labs-Ltd/novie-sdk.git", tag = "rust-v0.2.0" }

# Runtime deps used by the demo itself.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

# Local-development override (do NOT commit):
#   1. Comment out the `git = …` line above.
#   2. Uncomment the line below.
# novie-agent-sdk = { path = "../../rust/novie-agent-sdk" }
#
# Or use a workspace-wide patch in a top-level Cargo.toml:
#   [patch."ssh://git@github.com/Novamind-Labs-Ltd/novie-sdk.git"]
#   novie-agent-sdk = { path = "../../rust/novie-agent-sdk" }

[[bin]]
name = "novie-demo"
path = "src/main.rs"
