[package]
name = "novie-agent-sdk"
version = "0.2.0"
edition = "2024"
description = "Rust A2A Agent Runtime SDK for Novie Platform. Contracts are hand-mirrored from novie-protocol; see MIRRORED_PROTOCOL_VERSION in src/lib.rs."
license = "Apache-2.0"
publish = false
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "signal"] }
tracing = "0.1"
async-trait = "0.1"
url = "2"

# A2A runtime (Axum-based HTTP server)
axum = { version = "0.8", features = ["json", "tokio"] }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
futures = { version = "0.3", optional = true }
rusqlite = { version = "0.39.0", features = ["bundled"], optional = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["util"] }

[features]
default = ["runtime"]
runtime = ["dep:tower-http", "dep:futures", "dep:rusqlite"]
